--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,38 @@
-.container {
-    position: relative;
-    text-align: center;
-    color: white;
-  }
-  .texto-sobre-imagem {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-  body div button{
-    font-size: 13pt;
-    width: 110px;
-    height: 50px;
-    border-radius: 15px;
-    border-color: rgb(168, 125, 232);
-  }
-  #btn1{
-    background-color: rgb(168, 125, 232);
-  }
-  #btn2{
-    color: rgb(168, 125, 232);
-    background-color: black;
-  }
+/*=========Marcos Sampaio=========*/
+*{
+  margin: 0;
+  padding: 0;
+  color: white;
+}
+#img1{
+  width: 100%;
+  position: absolute;
+}
+div img{
+  border-bottom: 10px solid black;
+}
+#texto1{
+  width: 480px;
+  height: 150px;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  top: 250px;
+}
+div button{
+  width: 100px;
+  height: 40px;
+  border-radius: 10px;
+  margin-top: 5px;
+}
+#btn1{
+  background-color: rgb(152,125,232);
+  color: black;
+}
+#btn2{
+  background-color: black;
+  color: rgb(152,125,232);
+  border: 1pt solid rgb(152,125,232);
+}
+/*=========Marcos Sampaio=========*/
+
